# McAudioStudio

./: CMakeLists.txt  McGlobal.cpp  McGlobal.h  McMacroGlobal.h  README.en.md  README.md  main.cpp  main.qml
Android/: CMakeLists.txt  main.cpp  main.qml
Audio/: McAudioGenerator.cpp  McAudioGenerator.h  McAudioPlayer.cpp  McAudioPlayer.h
Audio/Envelope/Impl/: McADSREnvelope.cpp  McADSREnvelope.h  McBellEnvelope.cpp  McBellEnvelope.h  McNoEnvelope.cpp
Audio/Tone/: IMcToneGenerator.h  McNote.h
Audio/Tone/Impl/: McBellGenerator.cpp  McBellGenerator.h  McChirpGenerator.cpp  McPureToneGenerator.cpp  McViolinGenerator.cpp
AudioStudioCore/: CMakeLists.txt  McConfig.h.in  McGlobal.cpp  McGlobal.h  McMacroGlobal.h
AudioStudioCore/Audio/: McAudioGenerator.cpp  McAudioGenerator.h  McSampler.cpp  McSampler.h
AudioStudioCore/Audio/Envelope/: IMcEnvelope.h
AudioStudioCore/Audio/Envelope/Impl/: McADSREnvelope.cpp  McADSREnvelope.h  McBellEnvelope.cpp  McBellEnvelope.h  McNoEnvelope.h
AudioStudioCore/Audio/Tone/: McTone.h
AudioStudioCore/Audio/Tone/Impl/: McBellGenerator.cpp  McBellGenerator.h  McChirpGenerator.h  McPureToneGenerator.h  McSquareWaveGenerator.cpp  McSquareWaveGenerator.h  McViolinGenerator.h
Windows/: CMakeLists.txt  main.cpp
